[Widget] Text Field

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,7 @@
         android:theme="@style/Theme.GudangAja"
         tools:targetApi="31">
         <activity
-            android:name=".ui.welcome.WelcomActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".ui.splash.SplashActivity"
+            android:name=".ui.utils.TestActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,10 +22,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.welcome.WelcomActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.splash.SplashActivity"
+            android:exported="true">
 
+        </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
